feat(hub): allow in-place UI development
